# sicc-template

./: .envrc  README.md  main.py  pyproject.toml
